# mme

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
apps/: CMakeLists.txt
apps/Copy image_acquisition_app/: CMakeLists.txt  image_acquisition_app.cpp  image_acquisiton_app_dataanalysis.py  mme_microscope_dataanalysis.py  perform_dataanalysis.py  sample_MM_generation.py  spot_rotation_PSA_calibration.txt
apps/Copy image_acquisition_app/Calibration/: Calibration - generate intensity model and A+W matrices.mw  perform_intensity_fit_calibration.py
apps/esp_test/: CMakeLists.txt  esp_test.cpp
apps/filterwheel_test/: CMakeLists.txt  filterwheel_test.cpp
apps/image_acquisition_app/: CMakeLists.txt  analyse_and_plot_data.py  analyse_and_plot_function.py  image_acquisition_app.cpp  image_acquisiton_app_dataanalysis.py  mme_microscope_dataanalysis.py  perform_dataanalysis.py
apps/image_acquisition_app/Calibration/: Notat om kalibrering.docx  intensity_fit_calibration.py  perform_intensity_fit_calibration.py
apps/lumenera_test/: CMakeLists.txt  lumenera_test.cpp
apps/nidaq_test/: CMakeLists.txt  nidaq_test.cpp
apps/simple_test/: CMakeLists.txt  simple_test.cpp
data/: plot.py
data/Arkiv/: plot.py
mme/: CMakeLists.txt
mme/fwxc/: CMakeLists.txt  fwxc.cpp
mme/fwxc/include/mme/fwxc/: fwxc.h
mme/ihr/: CMakeLists.txt  ihr.cpp
mme/ihr/include/mme/ihr/: ihr.h
mme/ihrremote/: CMakeLists.txt  ihrcoms.cpp  ihrcoms.h  ihrremote.cpp
mme/ihrremote/include/mme/ihrremote/: ihrremote.h
mme/imaging/: CMakeLists.txt
mme/imaging/include/mme/imaging/: image.h
mme/lumenera/: CMakeLists.txt  lumeneracamera.cpp
mme/lumenera/include/mme/lumenera/: lumeneracamera.h
mme/motion/: CMakeLists.txt  espdriver.cpp
mme/motion/include/mme/motion/: espdriver.h
mme/nidaq/: CMakeLists.txt  adcnidaq.cpp  nidaqerrors.cpp
mme/nidaq/include/mme/nidaq/: adcnidaq.h  nidaqerrors.h
